[tool.poetry]
name = "projeto pratico"
version = "0.1.0"
description = ""
authors = ["Leandro Rodrigo da silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
pandas = "^2.2.3"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
